Update (overflow fix) & add loading message to upload

--- a/client/src/components/pages/trip/Map.css
+++ b/client/src/components/pages/trip/Map.css
@@ -1,6 +1,6 @@
 #map {
     width: 100%;
-    height: 1000px;
+    height: 100%;
 }
 
 #map-container {
