--- a/client/src/components/pages/trip/Trip.css
+++ b/client/src/components/pages/trip/Trip.css
@@ -1,4 +1,5 @@
 #trip-container {
     display: flex;
     flex-wrap: wrap;
+    height: 100vh;
 }
